perf: optimize map loading - lazy-load WeatherPage + tile layer tuning
- Code-split all heavy pages with React.lazy + Suspense
  - Initial bundle: 879KB -> 551KB (-37%)
  - WeatherPage + Leaflet loaded on-demand (174KB separate chunk)
- Leaflet TileLayer: added keepBuffer, updateWhenIdle, updateWhenZooming=false
- MapContainer: preferCanvas, zoomSnap, wheelDebounceTime
- Fixed marker icon: static L.Icon instance (no prototype deletion)
- Added preconnect hints for tile servers + CDN + Nominatim
- Lightweight loading spinner for lazy pages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🌾</text></svg>" />
+    <!-- Preconnect to tile servers and CDN for faster map loading -->
+    <link rel="preconnect" href="https://a.tile.openstreetmap.org" crossorigin />
+    <link rel="preconnect" href="https://b.tile.openstreetmap.org" crossorigin />
+    <link rel="preconnect" href="https://c.tile.openstreetmap.org" crossorigin />
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin />
+    <link rel="preconnect" href="https://nominatim.openstreetmap.org" crossorigin />
     <title>Smart Rural AI Advisor</title>
   </head>
   <body>
